--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Wwlcomw to this website</h1>
+<p>this is my first website .</p>
 
 </body>
 </html>
