--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
 
 <h1>Welcome to this website</h1>
-<h1>I Alex am the best coder alive</h1>
-<p>This is a paragraph.</p>
+<h1>Alex is the best coder alive</h1>
+<p>cs is fun.</p>
 <button type="button">Click Me!</button>
 </body>
 </html>
