--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Alex is the best coder alive</h1>
 <p>cs is fun.</p>
 <button type="button">Click Me!</button>
-<a herf"https://github.com/thebestcoder-ever">my github<a/>
+<a href="https://github.com/thebestcoder-ever">my github<a/>
   
 </body>
 </html>
