--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>cs is fun.</p>
 <button type="button">Click Me!</button>
 <br>
-<a href="https://github.com/thebestcoder-ever">my github<a/>
+<a href="https://github.com/thebestcoder-ever"></a><b>my github</b>b><a/>
   
 </body>
 </html>
