--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>cs is fun.</p>
 <button type="button">Click Me!</button>
 <br>
-<a href="https://github.com/thebestcoder-ever">  <b>my github</b> <a/>
+<a href="https://github.com/thebestcoder-ever" target= "_blank">  <b>my github</b> <a/>
   
 </body>
 </html>
