--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <br>
 <a href="https://github.com/thebestcoder-ever" target= "_blank">  <b>my github</b> <a/>
 <br>
-<img src= "https://www.chess.com/forum/view/site-feedback/brilliant-moves-arent-all-that-brilliant">
+<br>
+<img src= "https://placehold.co/600x400">
   
 </body>
 </html>
