--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <h1>Welcome to this website</h1>
 <h1>Alex is the best coder alive</h1>
 <p>cs is fun.</p>
-<button type="button">Click Me!</button>
+
+<button onclick="showImage()">Click Me</button>
+<br>
+
+<!-- Hidden image -->
+<img id="myImage" src="somthing.jfif" alt="Revealed Image" style="display: none; width: 200px;">
+
+<script>
+  function showImage() {
+    document.getElementById("myImage").style.display = "block";
+  }
+</script>
 <br>
 <a href="https://github.com/thebestcoder-ever" target= "_blank">  <b>my github</b> <a/>
 <br>
 <br>
-<img src= "https://placehold.co/600x400">
+<img src= "hihi.png">
+<br>
+    <a href="main.html">next page </a>
   
 </body>
 </html>
